// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`background color of spaces cyan for inchanged (expanded) 1`] = `
"- Expected
+ Received

  <div>
+   <p>
      <span>
        following string consists of a space:
         
         line has preceding space only
         line has both preceding and following space 
        line has following space only 
      </span>
+   </p>
  </div>"
`;

exports[`background color of spaces green for removed (expanded) 1`] = `
"- Expected
+ Received

  <div>
    <span>
-     following string consists of a space:
-      
-      line has preceding space only
-      line has both preceding and following space 
-     line has following space only 
+     
    </span>
  </div>"
`;

exports[`background color of spaces red for added (expanded) 1`] = `
"- Expected
+ Received

  <div>
    <span>
-     
+     following string consists of a space:
+      
+      line has preceding space only
+      line has both preceding and following space 
+     line has following space only 
    </span>
  </div>"
`;

exports[`background color of spaces yellow for unchanged (expanded) 1`] = `
"- Expected
+ Received

  <div>
-   <span>
+   <p>
      following string consists of a space:
       
       line has preceding space only
       line has both preceding and following space 
      line has following space only 
-   </span>
+   </p>
  </div>"
`;

exports[`collapses big diffs to patch format 1`] = `
"- Expected
+ Received

@@ -6,9 +6,9 @@
      4,
      5,
      6,
      7,
      8,
+     10,
      9,
-     10,
    ],
  }"
`;

exports[`color of text (expanded) 1`] = `
"- Expected
+ Received

  Object {
    \\"searching\\": \\"\\",
-   \\"sorting\\": Object {
+   \\"sorting\\": Array [
+     Object {
        \\"descending\\": false,
        \\"fieldKey\\": \\"what\\",
      },
+   ],
  }"
`;

exports[`context number of lines: -1 (5 default) 1`] = `
"- Expected
+ Received

@@ -6,9 +6,9 @@
      4,
      5,
      6,
      7,
      8,
+     10,
      9,
-     10,
    ],
  }"
`;

exports[`context number of lines: 0  1`] = `
"- Expected
+ Received

@@ -11,0 +11,1 @@
+     10,
@@ -12,1 +13,0 @@
-     10,"
`;

exports[`context number of lines: 1  1`] = `
"- Expected
+ Received

@@ -10,4 +10,4 @@
      8,
+     10,
      9,
-     10,
    ],"
`;

exports[`context number of lines: 2  1`] = `
"- Expected
+ Received

@@ -9,6 +9,6 @@
      7,
      8,
+     10,
      9,
-     10,
    ],
  }"
`;

exports[`context number of lines: null (5 default) 1`] = `
"- Expected
+ Received

@@ -6,9 +6,9 @@
      4,
      5,
      6,
      7,
      8,
+     10,
      9,
-     10,
    ],
  }"
`;

exports[`falls back to not call toJSON if it throws and then objects have differences 1`] = `
"- Expected
+ Received

  Object {
-   \\"line\\": 1,
+   \\"line\\": 2,
    \\"toJSON\\": [Function toJSON],
  }"
`;

exports[`falls back to not call toJSON if serialization has no differences but then objects have differences 1`] = `
"Compared values serialize to the same structure.
Printing internal object structure without calling \`toJSON\` instead.

- Expected
+ Received

  Object {
-   \\"line\\": 1,
+   \\"line\\": 2,
    \\"toJSON\\": [Function toJSON],
  }"
`;

exports[`highlight only the last in odd length of leading spaces (expanded) 1`] = `
"- Expected
+ Received

  <pre>
-   attributes.reduce(function (props, attribute) {
-    props[attribute.name] = attribute.value;
+   attributes.reduce((props, {name, value}) =&gt; {
+   props[name] = value;
    return props;
-  }, {});
+ }, {});
  </pre>"
`;
